# detect_distance_gazebo

./: .gitignore  README.md
src/camera_locate/: CMakeLists.txt  package.xml
src/camera_locate/launch/: camera_locte_fly.launch  camera_locte_gazebo.launch
src/camera_locate/scripts/: cam_pos.py  gazebo_ugv_pos.py  locate__fly.py  locate_gazebo.py  uav_rtk.py
src/camera_locate/scripts/backup/: camera.py
src/camera_locate/scripts/calbration/: camera_cal.py  image_save.py
src/camrea_locate/: CMakeLists.txt  package.xml
src/camrea_locate/data/: dis_data.txt
src/camrea_locate/launch/: camera_locte.launch
src/camrea_locate/scripts/: cam_pos.py  locate.py  ugv_pos.py
src/camrea_locate/scripts/calbration/: camera.yaml
src/camrea_locate/scripts/calbration/cal1/: Untitled Document 1
src/camrea_locate/scripts/other_file/: car_rtk.py  locate_0422backup.py
src/yolov5_detect/: CMakeLists.txt  package.xml
src/yolov5_detect/backup/: yolov5_detect_1920_batch.cpp
src/yolov5_detect/include/yolov5_detect/: Hungarian.h  KalmanTracker.h  VideoCapture.hpp  common.hpp  sort.h  video.h  yololayer.h
src/yolov5_detect/launch/: yolov5_detect.launch  yolov5_detect_fly.launch  yolov5_detect_gazebo.launch
src/yolov5_detect/msg/: detect.msg
src/yolov5_detect/script/: yolov5_detect.py
src/yolov5_detect/src/: Hungarian.cpp  KalmanTracker.cpp  calibrator.cpp  preprocess.cu  sort.cpp  video.cpp  yololayer.cu  yolov5_detect_1024.cpp  yolov5_detect_1920.cpp  yolov5_detect_1920_batch.cpp  yolov5_detect_fly.cpp  yolov5_detect_gazebo.cpp
